Adds new functions and improvements
- Adds Progressbar while installing a new update
- Adds env.py file for global variables
- Adds create_exe.bat file for creating an exe file with nuitka
- The inno Setup script will now install other extensions to (NX Language for VS Code, MTK_Deliverer and Open_VSCode for NX)

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
-launch Startcenter.bat
 config.json
-.env
 venv
 output/exe
 output/installer/Output
@@ -9,3 +7,9 @@ build
 NX Start Center.spec
 update erstellen.md
 .idea
+env.py
+__pycache__
+controller/__pycache__
+view/__pycache__
+model/__pycache__
+nuitka-crash-report.xml
