--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,21 @@
+aiohttp==3.9.5
+aiosignal==1.3.1
 altgraph==0.17.4
+asyncio==3.4.3
+attrs==23.2.0
 certifi==2024.6.2
 charset-normalizer==3.3.2
+Cython==3.0.10
+frozenlist==1.4.1
 idna==3.7
+multidict==6.0.5
 packaging==24.0
 pefile==2023.2.7
 pillow==10.3.0
 pyinstaller==6.7.0
 pyinstaller-hooks-contrib==2024.6
-python-dotenv==1.0.1
 pywin32-ctypes==0.2.2
 requests==2.32.3
 ttkbootstrap==1.10.1
 urllib3==2.2.1
+yarl==1.9.4
