--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,8 @@ Cython==3.0.10
 frozenlist==1.4.1
 idna==3.7
 multidict==6.0.5
+Nuitka==2.3.2
+ordered-set==4.1.0
 packaging==24.0
 pefile==2023.2.7
 pillow==10.3.0
@@ -19,3 +21,4 @@ requests==2.32.3
 ttkbootstrap==1.10.1
 urllib3==2.2.1
 yarl==1.9.4
+zstandard==0.22.0
