Adds Support for Complex CAM environment with the custom_nx.bat file from Sven

--- a/src/.gitignore
+++ b/src/.gitignore
@@ -1,3 +1,14 @@
+sample/**
+Sample/**
+samples/**
+Samples/**
+cam-setup/**
+CAM-setup/**
+CAM_Setup/**
+CAM_setup/**
+cam_setup/**
+**/__pycache__/
+
 !sample/**/*.prt
 !Sample/**/*.prt
 !samples/**/*.prt
